# ChatGH

./: .gitignore  404.html  CHANGELOG.md  README.en.md  README.md  chatrest.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
docs/: gh-interface-alignment.en.md  gh-interface-alignment.md  index.en.md  index.md
gh-interface-alignment/: index.html
gh-interface-alignment.en/: index.html
index.en/: index.html
search/: search_index.json
src/chatgh/: __init__.py  cli.py  config.py
src/chatgh/_generated/: __init__.py
src/chatgh/adapters/: __init__.py  client.py
src/chatgh/commands/: __init__.py  pr.py
src/chatgh/github/: __init__.py  api.py  cli.py  client.py  commands.py  requests.py
tests/: test_adapter_client.py  test_chatenv_entrypoint.py  test_chatenv_provider.py  test_cli.py  test_version.py
tests/code-tests/github/: test_github_cli.py  test_repo_local_auth.py
tests/mock-cli-tests/gh/: test_chatgh_actions_diagnostics.py  test_chatgh_basic.py  test_chatgh_common_commands.py  test_chatgh_pr_write_commands.py  test_chatgh_repo_fork.md
