[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgh"
dynamic = ["version"]
description = "GitHub CLI and Python helpers for ChatArch"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "chatstyle>=0.1.0", "chatenv>=0.1.1", "PyGithub>=2.0", "requests>=2.0", "httpx>=0.24"]
authors = [{name = "ChatArch", email = "1073853456@qq.com"}]
keywords = ["chatgh", "chatarch", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
chatgh = "chatgh.cli:main"

[project.entry-points."chatenv.configs"]
chatgh = "chatgh.config"

[project.optional-dependencies]
dev = ["build", "pytest", "twine"]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=9.0.0", "mike>=2.0.0"]

[tool.setuptools.dynamic]
version = {attr = "chatgh.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
markers = [
    "mock_cli: mock CLI tests that do not call external services",
]
